--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -4,6 +4,7 @@ scipy==1.3.1
 transformers==2.1.1
 Flask-Cors==3.0.8
 Flask-PyMongo==2.3.0
+Flask-Session==0.3.1
 requests==2.22.0
 slackclient==1.2.1
 slackeventsapi==2.0.0
